// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetlookup.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$variable['data']['title'] = html_entity_decode(wp_get_document_title());
$variable['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString']['title'] = html_entity_decode(wp_get_document_title());
$variable['data']['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'] = html_entity_decode(wp_get_document_title());
$variable['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString']['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'] = html_entity_decode(wp_get_document_title());
$variable[1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111][1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111] = html_entity_decode(wp_get_document_title());
$variable['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'] = $variable->registered['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'];
$variable = get_taxonomy_function(get_queried_object_function()->taxonomy)->object_type[0];
$someArray[] = $this->something->long->that->not->makes->it->break->onto->two->break->lines();
$variable = "abcdef"[-2];

$variable[1];
$variable[11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111];
$variable['string'];
$variable['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'];
$variable['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString']['veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString'];

$var = $a{$b};
$var = $a{$b}{$c};
$var = $a[$b]{$c};
$var = $a{$b}[$c];

=====================================output=====================================
<?php

$variable["data"]["title"] = html_entity_decode(wp_get_document_title());
$variable[
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
]["title"] = html_entity_decode(wp_get_document_title());
$variable["data"][
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
] = html_entity_decode(wp_get_document_title());
$variable[
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
][
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
] = html_entity_decode(wp_get_document_title());
$variable[1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111][1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111] = html_entity_decode(
    wp_get_document_title()
);
$variable[
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
] =
    $variable->registered[
        "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
    ];
$variable = get_taxonomy_function(get_queried_object_function()->taxonomy)
    ->object_type[0];
$someArray[] = $this->something->long->that->not->makes->it->break->onto->two->break->lines();
$variable = "abcdef"[-2];

$variable[1];
$variable[11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111];
$variable["string"];
$variable[
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
];
$variable[
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
][
    "veryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLongString"
];

$var = $a[$b];
$var = $a[$b][$c];
$var = $a[$b][$c];
$var = $a[$b][$c];

================================================================================
`;

exports[`single.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$arr[1];

=====================================output=====================================
<?php
$arr[1];

================================================================================
`;

exports[`single-multiple.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$a[$b]{$c};
=====================================output=====================================
<?php

$a[$b][$c];

================================================================================
`;
